--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
-.wrapper {
+body {
+  font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(rgb(68, 179, 207), rgba(142, 241, 139));
+}
+.wrapper {
   height: 720px;
   margin: 0px;
 }
+
+h1 {
+  text-align: center;
+}
+
+.lesson {
+  margin: 0 auto;
+  width: 60%;
+  border: 1px solid gray;
+  border-radius: 5px;
+  background-color: rgb(62, 63, 62, 0.3);
+  padding: 15px;
+}
+
+/* .lesson--text {
+} */
